# zenithlang

./: --run  --run.map  .codex_demo.lua  .codex_fase11_safety.lua  .codex_match_hardening.lua  .codex_phase5_bootstrap.lua  .codex_phase5_control.lua  .codex_ufcs_hardening.lua  .gitignore  ANALISE-EMITTER-C-2026-04-18.md  ANALISE-PARSER-ZENITH-2026-04-18.md  ANALISE_IMPLEMENTACAO_PROFUNDA.md  ANALISE_SINTAXE_PROFUNDA.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CORRECOES-CRITICAS-PARSER-2026-04-18.md  EXEMPLO_ABRANGENTE.zt  EXEMPLO_COMENTARIOS_CORRIGIDOS.zt  GATE_VERMELHO_CORRIGIDO.md  GUIA_PRATICO_E_TEORICO.md  HEAVY_TESTS_BRIEFING.md  IMPLEMENTATION_CASCADE.md  IMPLEMENTATION_CASCADE_2_0.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST_2_0.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_ROADMAP_2_0.md  LANGUAGE_COHERENCE_CLOSURE.md  LICENSE  MELHORIAS-EMITTER-C-2026-04-18.md  MELHORIAS-FINAIS-EMITTER-C-2026-04-18.md  MELHORIAS-ROBUSTEZ-PARSER-2026-04-18.md  README.md  RELATORIO-ANALISE-FRONTEND-2026-04-18.md  RELATORIO-CORRECOES-LEXER-2026-04-18.md  RELATORIO-FINAL-CORRECOES-2026-04-18.md  RELATORIO_ANALISE_PROFUNDA_CHECKLIST.md  RELATORIO_FINAL_ANALISE_CHECKLIST.md  SECURITY.md  (+107 more)
tools/borealis-editor-iced/: Cargo.toml
tools/borealis-editor-iced/src/: main.rs  modern_theme.rs
tools/borealis-studio/src-tauri/: Cargo.toml  tauri.conf.json
tools/borealis-studio/src-tauri/src/: main.rs
tools/borealis-studio/src-tauri/src/commands/: asset.rs  clipboard.rs  component.rs  entity.rs  file.rs  history.rs  mod.rs  preview.rs  project.rs  scene.rs  selection.rs
(+2612 files in other folders)
