[package]
name = "borealis-editor-iced"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.14", features = ["canvas"] }
iced-code-editor = "0.3"
iced_aw = "0.13"
lucide-icons = { version = "1.9", features = ["iced"] }
iced_term = { version = "0.8", optional = true }
iced_video_player = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
terminal = ["dep:iced_term"]
video-preview = ["dep:iced_video_player"]
