[package]
name = "borealis-studio"
version = "0.1.0"
description = "Borealis Studio desktop editor"
authors = ["Zenith"]
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
